--- a/resources/css/min-width601px_max-width768px.css
+++ b/resources/css/min-width601px_max-width768px.css
@@ -88,7 +88,7 @@ h2 {font-size: 2.25rem}
   padding-top: 0.5rem;
 }
 
-.link {padding-bottom: 2rem;}
+.link {padding-bottom: 0rem;}
 .link--padding {padding-bottom: 1rem;}
 
 .link a {
@@ -110,7 +110,6 @@ h2 {font-size: 2.25rem}
 }
 /*wireframe says 64px between each pic but looks weired, used half */
 .col-s__pic-container {
-  margin-bottom: 2rem;
   border-radius: 2px;
 }
 
@@ -129,19 +128,20 @@ h2 {padding-top: 0rem;}
   padding:0rem;/*2rem looks better than wireframe 1rem*/
   color:#888;
   font-weight: 600;
-  font-size: 1.25rem;
+  font-size: 1.375rem;
+  }
+  .text-box-courses p {
+    font-size: 1.125rem;
   }
 .text-box-courses span {
-  font-size: 0.935rem;
+  font-size: .935rem;
 }
 
 .courses__container--center {margin: 0;}
 
 .section--mobile{
-  padding-bottom: 1.5rem;
   background-color: #d8d8d8;
-  border-top: #f0f0f0 solid 1px;
-  border-bottom: #f0f0f0 solid 1px;
+  border: none;
 }
 
 .courses {
@@ -151,7 +151,7 @@ h2 {padding-top: 0rem;}
 .courses__container {
   flex:0 1 48%;
   background-color: #fff;
-  margin-bottom: 1.75rem;
+  margin-bottom: 2rem;
   padding-bottom: 0rem;
   border-radius: 2px;
 }
