--- a/resources/css/min-width471px_max-width600px.css
+++ b/resources/css/min-width471px_max-width600px.css
@@ -81,9 +81,9 @@ h2 {font-size: 2.25rem}
   font-size: 1.75rem;
 }
 .text-box-s p {
-  font-size: 1.325rem;
-  font-weight: 100;
-  color:#888
+  font-size: 1.25rem;
+  font-weight: normal;
+  color:#999;
 }
 
 .text-box-s span{
@@ -91,7 +91,7 @@ h2 {font-size: 2.25rem}
 }
 
 .link {padding-bottom: 0rem;}
-.link--padding {padding-bottom: 1rem;}
+.link--padding {padding-bottom: 0rem;}
 
 .link a {
     font-size: 1.125rem;
