--- a/resources/css/min-width601px_max-width768px.css
+++ b/resources/css/min-width601px_max-width768px.css
@@ -80,8 +80,8 @@ h2 {font-size: 2.25rem}
 }
 .text-box-s p {
   font-size: 1.125rem;
-  font-weight: 100;
-  color:#888
+  font-weight: normal;
+  color:#999;
 }
 
 .text-box-s span{
@@ -89,7 +89,7 @@ h2 {font-size: 2.25rem}
 }
 
 .link {padding-bottom: 0rem;}
-.link--padding {padding-bottom: 1rem;}
+.link--padding {padding-bottom: 0rem;}
 
 .link a {
   font-size: .935rem;
