--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -192,8 +192,8 @@ display: block;}
 
 .text-box__name-font {
   padding: 1rem 0rem;
-  font-size: .875rem;
-  font-weight: 100;
+  font-size: .935rem;
+  font-weight: bold;
   display: block;
   font-family: 'Italianno', cursive;
   color:#999;
