--- a/resources/css/min-width601px_max-width768px.css
+++ b/resources/css/min-width601px_max-width768px.css
@@ -89,19 +89,19 @@ h2 {font-size: 2.25rem}
 }
 
 .link {padding-bottom: 0rem;}
-.link--padding {padding-bottom: 0rem;}
+.link--padding {padding-bottom: 1rem;}
 
 .link a {
   font-size: .935rem;
-  color:#888;
+  color:#24AAFE;
   text-decoration: none;
-  }
+}
 .link a:hover {
-  color: #888;
-  border-bottom: #b22222 solid 2px;
-  transition: color 250ms ease-in-out 0ms;
-  transition: border 250ms linear 100ms;
-  }
+  color:#24AAFE;
+  border-bottom: white solid 2px;
+  transition: none 250ms ease-in-out 0ms;
+  transition: none 250ms linear 100ms;
+}
 .col--border {border:none}
 
 .col-s__container:hover {
@@ -135,6 +135,7 @@ h2 {padding-top: 0rem;}
   }
 .text-box-courses span {
   font-size: .935rem;
+  font-weight: normal;
 }
 
 .courses__container--center {margin: 0;}
