--- a/resources/css/min-width601px_max-width768px.css
+++ b/resources/css/min-width601px_max-width768px.css
@@ -1,6 +1,11 @@
 @media all and (min-width: 601px), and (max-width: 768px) {
 h2 {font-size: 2.25rem}
 
+h3 {
+  color: #888;
+  font-family: 'Open Sans', sans-serif;
+}
+
 /* nav section */
 .nav--hide, .logo {display: none;}
 
@@ -77,22 +82,25 @@ h2 {font-size: 2.25rem}
 .text-box-s h3 {
   letter-spacing: -1px;
   font-size: 1.5rem;
+  font-weight: 400;
+  color: #666;
 }
 .text-box-s p {
-  font-size: 1.125rem;
-  font-weight: normal;
+  padding-top: 1rem;
+  font-size: 1.0625rem;
+  font-weight: 300;
   color:#999;
 }
 
 .text-box-s span{
-  padding-top: 0.5rem;
+  padding-top: 0.75rem;
 }
 
 .link {padding-bottom: 0rem;}
 .link--padding {padding-bottom: 1rem;}
 
 .link a {
-  font-size: .935rem;
+  font-size: 0.935rem;
   color:#24AAFE;
   text-decoration: none;
 }
@@ -112,12 +120,14 @@ h2 {font-size: 2.25rem}
 .col-s__pic-container {
   border-radius: 2px;
 }
+.col-s__container--margin {
+  margin-bottom: 2rem;
+}
 
 .col-s__container {
   width: 100%;
-  box-sizing: border-box;
   flex-flow: row;
-  padding: 1rem 2rem;
+  padding: 2rem 2rem 0rem 2rem;
 }
 
 /*2nd gray/picture gallery section*/
@@ -126,15 +136,17 @@ h2 {padding-top: 0rem;}
 .text-box h2 {font-size: 2.25rem}
 .text-box-courses h3 {
   padding:0rem;/*2rem looks better than wireframe 1rem*/
-  color:#888;
+  color:#666;
   font-weight: 600;
   font-size: 1.375rem;
   }
   .text-box-courses p {
-    font-size: 1.125rem;
+    padding-top: 1.25rem;
+    font-size: 1.0625rem;
+    color: #888;
   }
 .text-box-courses span {
-  font-size: .935rem;
+  font-size: .85rem;
   font-weight: normal;
 }
 
