--- a/resources/css/min-width769px-max-width1024px.css
+++ b/resources/css/min-width769px-max-width1024px.css
@@ -1,3 +1,4 @@
+/* Landscape phablets/some tablets/some desktops and portrait tablets max1024 */
 @media all and (min-width: 769px), and (max-width: 1024px) {
 h2 {font-size: 2.25rem}
 
@@ -97,7 +98,7 @@ header {
 }
 .text-box-s h3 {
   letter-spacing:-1px;;
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-weight: 400;
   color: #666;
 }
