--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -115,6 +115,10 @@ header {
   display:flex;
   justify-content: space-between;
   height: 4rem;
+  position: fixed;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 0px 2px 2px 0px rgba(29, 29, 29, 0.1);
 }
 
 .logo, .nav {
@@ -165,6 +169,9 @@ header {
   display: flex;
   padding: 2rem 0rem 2rem 0rem;
 }
+.section--margintop {
+  margin-top: 4rem;
+}
 .section--gray {background-color: #d8d8d8;}
 .section--white {background-color: #ffffff;}
 .section--column {
@@ -174,20 +181,19 @@ header {
 }
 
 .col, .col-s {
-  width: 57%; /*changed the design a little on purpose: original 60%*/
+  width: 58%; /*changed the design a little on purpose: original 60%*/
   margin-left: 1.5rem;
   height: auto;
   display: flex;
   flex-flow: column;
 }
-.col {
-  margin-right: 0.5rem;
+.col {margin-right: 0.5rem;}
+.col__container {
+  max-width: 100%;
 }
-.col-s {width: 43%;}/*changed the design a little on purpose: original 40%*/
+.col-s {width: 42%;}/*changed the design a little on purpose: original 40%*/
 
-/*all assets on site */
 .pic-container,
-.video-container,
 .col-s__pic-container,
 .courses__pic-container{
   width: 100%;
@@ -195,10 +201,11 @@ header {
   overflow: hidden;
   border-radius: 4px;
 }
+
 .pic-container img,
-.video-container source,
 .courses__pic-container img,
 .pic-desktop,
+.video-container,
 .pic-mobile{
 max-width:100%;
 height: auto;
@@ -311,6 +318,7 @@ display: block;}
 .text-box--aligncenter {text-align: center;}
 .section--nopadding {
   padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 
 .courses{
@@ -335,7 +343,9 @@ display: block;}
   overflow: hidden;
 }
 
-.courses__pic-container{border-radius: 4px 4px 0px 0px;}
+.courses__pic-container{
+  border-radius: 4px 4px 0px 0px;
+}
 /* two pics in the center*/
 .courses__container--center {
   margin-left:2rem;
@@ -372,6 +382,14 @@ display: block;}
   display: flex;
   margin-top: 2rem;
 }
+
+.col__container {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+
+.video-container {border-radius: 4px;}
 
 /* footer section */
 footer{
