--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -195,8 +195,7 @@ header {
 
 .pic-container,
 .col-s__pic-container,
-.courses__pic-container,
-.video-container{
+.courses__pic-container{
   width: 100%;
   height: auto;
   overflow: hidden;
@@ -206,7 +205,7 @@ header {
 .pic-container img,
 .courses__pic-container img,
 .pic-desktop,
-.video-container source,
+.video-container,
 .pic-mobile{
 max-width:100%;
 height: auto;
@@ -384,6 +383,11 @@ display: block;}
   margin-top: 2rem;
 }
 
+.col__container {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
 
 .video-container {border-radius: 4px;}
 
